--- a/src/D2RLaunch/D2RLaunch/Styling.xaml
+++ b/src/D2RLaunch/D2RLaunch/Styling.xaml
@@ -7,8 +7,7 @@
 
     <converters:InverseBooleanConverter x:Key="InverseBooleanConverter" />
 
-    <ObjectDataProvider
-        x:Key="Resources"
+    <ObjectDataProvider x:Key="Resources"
         MethodName="GetResourceInstance"
         ObjectType="{x:Type cultures:CultureResources}" />
 
@@ -256,8 +255,7 @@
             Duration="0:0:0.9" />
     </Storyboard>
 
-    <Style
-        x:Key="RedTextBlockStyle"
+    <Style x:Key="RedTextBlockStyle"
         BasedOn="{StaticResource WPFTextBlockStyle}"
         TargetType="TextBlock">
         <Setter Property="FontSize" Value="15" />
@@ -312,8 +310,7 @@
         </Style.Triggers>
 
     </Style>
-    <Style
-        x:Key="LabelHeaderStyle"
+    <Style x:Key="LabelHeaderStyle"
         BasedOn="{StaticResource WPFLabelStyle}"
         TargetType="Label">
         <Setter Property="FontSize" Value="16" />
@@ -322,20 +319,18 @@
         <Setter Property="Margin" Value="5,5,5,0" />
         <Setter Property="VerticalAlignment" Value="Center" />
     </Style>
-    <Style
-    x:Key="EventNameStyle"
-    BasedOn="{StaticResource WPFLabelStyle}"
-    TargetType="Label">
+    <Style x:Key="EventNameStyle"
+        BasedOn="{StaticResource WPFLabelStyle}"
+        TargetType="Label">
         <Setter Property="FontSize" Value="22" />
         <Setter Property="Foreground" Value="CornflowerBlue" />
         <Setter Property="HorizontalAlignment" Value="Center" />
         <Setter Property="Margin" Value="5,5,5,0" />
         <Setter Property="VerticalAlignment" Value="Center" />
     </Style>
-    <Style
-    x:Key="EventHeaderStyle"
-    BasedOn="{StaticResource WPFLabelStyle}"
-    TargetType="Label">
+    <Style x:Key="EventHeaderStyle"
+        BasedOn="{StaticResource WPFLabelStyle}"
+        TargetType="Label">
         <Setter Property="FontSize" Value="12" />
         <Setter Property="Foreground" Value="Firebrick" />
         <Setter Property="HorizontalAlignment" Value="Center" />
@@ -347,8 +342,7 @@
         <Setter Property="Foreground" Value="Firebrick" />
     </Style>
 
-    <Style
-        x:Key="LabelNormalStyle"
+    <Style x:Key="LabelNormalStyle"
         BasedOn="{StaticResource WPFLabelStyle}"
         TargetType="Label">
         <Setter Property="FontSize" Value="16" />
@@ -356,8 +350,7 @@
         <Setter Property="Margin" Value="5,5,5,0" />
         <Setter Property="VerticalAlignment" Value="Center" />
     </Style>
-    <Style
-        x:Key="LabelNormalGoldStyle"
+    <Style x:Key="LabelNormalGoldStyle"
         BasedOn="{StaticResource WPFLabelStyle}"
         TargetType="Label">
         <Setter Property="FontSize" Value="12" />
@@ -366,8 +359,7 @@
         <Setter Property="Margin" Value="5,5,5,0" />
         <Setter Property="VerticalAlignment" Value="Center" />
     </Style>
-    <Style
-        x:Key="ComboBoxStyle"
+    <Style x:Key="ComboBoxStyle"
         BasedOn="{StaticResource WPFComboBoxStyle}"
         TargetType="ComboBox">
         <Setter Property="FontSize" Value="14" />
@@ -375,16 +367,14 @@
         <Setter Property="Margin" Value="5,0,5,0" />
         <Setter Property="VerticalContentAlignment" Value="Center" />
     </Style>
-    <Style
-        x:Key="TextBlockStyle"
+    <Style x:Key="TextBlockStyle"
         BasedOn="{StaticResource WPFTextBlockStyle}"
         TargetType="TextBlock">
         <Setter Property="FontSize" Value="16" />
         <Setter Property="HorizontalAlignment" Value="Center" />
         <Setter Property="VerticalAlignment" Value="Center" />
     </Style>
-    <Style
-        x:Key="TextBlockStyleGold"
+    <Style x:Key="TextBlockStyleGold"
         BasedOn="{StaticResource WPFTextBlockStyle}"
         TargetType="TextBlock">
         <Setter Property="FontSize" Value="16" />
@@ -392,37 +382,32 @@
         <Setter Property="HorizontalAlignment" Value="Center" />
         <Setter Property="VerticalAlignment" Value="Center" />
     </Style>
-    <Style
-        x:Key="TextBoxStyle"
+    <Style x:Key="TextBoxStyle"
         BasedOn="{StaticResource WPFTextBoxStyle}"
         TargetType="TextBox">
         <Setter Property="Margin" Value="5,5,5,0" />
 
     </Style>
-    <Style
-        x:Key="ButtonStyle"
+    <Style x:Key="ButtonStyle"
         BasedOn="{StaticResource WPFButtonStyle}"
         TargetType="Button">
         <Setter Property="FontSize" Value="14" />
         <Setter Property="Margin" Value="5" />
     </Style>
-    <Style
-        x:Key="ToggleButtonStyle"
+    <Style x:Key="ToggleButtonStyle"
         BasedOn="{StaticResource WPFToggleButtonStyle}"
         TargetType="ToggleButton">
         <Setter Property="FontSize" Value="14" />
         <Setter Property="Margin" Value="5" />
     </Style>
-    <Style
-        x:Key="SfButtonAdvLargeStyle"
+    <Style x:Key="SfButtonAdvLargeStyle"
         BasedOn="{StaticResource SyncfusionButtonAdvStyle}"
         TargetType="syncfusion:ButtonAdv">
         <Setter Property="FontSize" Value="14" />
         <Setter Property="Margin" Value="5" />
         <Setter Property="SizeMode" Value="Large" />
     </Style>
-    <Style
-        x:Key="SfButtonAdvNormalStyle"
+    <Style x:Key="SfButtonAdvNormalStyle"
         BasedOn="{StaticResource SyncfusionButtonAdvStyle}"
         TargetType="syncfusion:ButtonAdv">
         <Setter Property="FontSize" Value="16" />
@@ -435,8 +420,7 @@
             </Trigger>
         </Style.Triggers>
     </Style>
-    <Style
-        x:Key="SfLinearProgressBarStyle"
+    <Style x:Key="SfLinearProgressBarStyle"
         BasedOn="{StaticResource SyncfusionSfLinearProgressBarStyle}"
         TargetType="syncfusion:SfLinearProgressBar">
         <Setter Property="Height" Value="20" />
@@ -446,16 +430,14 @@
         <Setter Property="ProgressColor" Value="#c7b377" />
         <Setter Property="TrackColor" Value="#200708" />
     </Style>
-    <Style
-        x:Key="SfButtonAdvSmallStyle"
+    <Style x:Key="SfButtonAdvSmallStyle"
         BasedOn="{StaticResource SyncfusionButtonAdvStyle}"
         TargetType="syncfusion:ButtonAdv">
         <Setter Property="FontSize" Value="14" />
         <Setter Property="Margin" Value="5" />
         <Setter Property="SizeMode" Value="Small" />
     </Style>
-    <Style
-        x:Key="CheckBoxStyle"
+    <Style x:Key="CheckBoxStyle"
         BasedOn="{StaticResource WPFCheckBoxStyle}"
         TargetType="CheckBox">
         <Setter Property="FontSize" Value="14" />
