--- a/src/D2RLaunch/D2RLaunch/Views/Drawers/HomeDrawerView.xaml
+++ b/src/D2RLaunch/D2RLaunch/Views/Drawers/HomeDrawerView.xaml
@@ -379,6 +379,7 @@
                             <RowDefinition Height="Auto" />
                             <RowDefinition Height="Auto" />
                             <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
                         </Grid.RowDefinitions>
 
                         <syncfusion:ButtonAdv
@@ -425,7 +426,7 @@
                             Style="{StaticResource ComboBoxStyle}" />
                         <CheckBox
                             Grid.Row="6"
-                            Margin="5,10,5,5"
+                            Margin="5,5,5,5"
                             HorizontalAlignment="Center"
                             Content="{Binding Path=HDR, Source={StaticResource Resources}}"
                             IsChecked="{Binding ShellViewModel.UserSettings.HdrFix}"
@@ -436,13 +437,27 @@
                             cm:Message.Attach="[Event Checked] = [Action OnMapRegenChecked]; [Event Unchecked] = [Action OnMapRegenChecked];"
                             Content="{Binding Path=Regen, Source={StaticResource Resources}}"
                             IsChecked="{Binding ShellViewModel.UserSettings.ResetMaps}"
-                            Style="{StaticResource CheckBoxStyle}" />
+                            Style="{StaticResource CheckBoxStyle}" Margin="5,0,5,5" />
                         <CheckBox
                             Grid.Row="8"
                             HorizontalAlignment="Center"
                             Content="{Binding Path=Respec, Source={StaticResource Resources}}"
                             IsChecked="{Binding ShellViewModel.UserSettings.InfiniteRespec}"
-                            Style="{StaticResource CheckBoxStyle}" />
+                            Style="{StaticResource CheckBoxStyle}" Margin="5,0,5,5" />
+                        <CheckBox
+                            Grid.Row="9"
+                            HorizontalAlignment="Center"
+                            Content="Overlay Fix"
+                            IsChecked="{Binding ShellViewModel.UserSettings.MSIFix}"
+                            Style="{StaticResource CheckBoxStyle}" Margin="5,0,5,5" />
+                        <syncfusion:ButtonAdv
+                            Grid.Row="9"
+                            Width="24"
+                            Height="24"
+                            cm:Message.Attach="[Event Click] = [Action OnMSIFixHelp];"
+                            Background="Transparent"
+                            IconTemplate="{StaticResource QuestionMarkIconTemplate}"
+                            Style="{StaticResource SfButtonAdvSmallStyle}" Margin="125,-5,5,5" />
                     </Grid>
                 </Grid>
 
