--- a/src/D2RLaunch/D2RLaunch/Views/Drawers/QoLOptionsDrawerView.xaml
+++ b/src/D2RLaunch/D2RLaunch/Views/Drawers/QoLOptionsDrawerView.xaml
@@ -635,8 +635,13 @@
                         FontWeight="Bold"
                         Foreground="Goldenrod"
                         Style="{StaticResource LabelHeaderStyle}" />
+                    <UniformGrid
+                        Grid.Row="17"
+                        HorizontalAlignment="Center"
+                        Columns="2">
                     <ComboBox
                         Grid.Row="17"
+                        Grid.Column="0"
                         Width="125"
                         Height="40"
                         Background="#FF313030"
@@ -646,6 +651,15 @@
                         SelectedIndex="{Binding ShellViewModel.UserSettings.CinematicSubs}"
                         SelectedValuePath="Value"
                         Style="{StaticResource ComboBoxStyle}" />
+                    <CheckBox
+                        Grid.Row="17"
+                        Grid.Column="1"
+                        Margin="5,5,5,5"
+                        HorizontalAlignment="Center"
+                        Content="Skip Act Cinematics"
+                        IsChecked="{Binding ShellViewModel.UserSettings.skipCinematics}"
+                        Style="{StaticResource CheckBoxStyle}" />
+                        </UniformGrid>
                     <Label
                         Grid.Row="18"
                         Margin="5,15,5,0"
